--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,84 +1,8 @@
-<div style="width:800px; margin: 10px auto;">
-  <h1 (click)="workflowStepAuto()">{{title | uppercase}}</h1>
-  <h2>Nodal Acc</h2>
-  <div class="collection">
-    <span>total:</span>
-    <span class="collection_prop">{{payment.nodalBalance.total | convert}}</span>
-    <span>merchant:</span>
-    <span class="collection_prop">{{payment.nodalBalance.merchant | convert}}</span>
-    <span>market:</span>
-    <span class="collection_prop">{{payment.nodalBalance.market | convert}}</span>
-    <a href="#"
-       *ngIf="payment.nodalBalance.total"
-       (click)="emitNodalSettlementEvent()">Nodal Settlement</a>
-    <div *ngFor="let merchant of merchants;">
-      <span>merchant:</span>
-      <span class="collection_prop">{{merchant.name}}</span>
-      <span class="collection_prop">{{merchant.balance | convert}}</span>
-    </div>
-  </div>
-  <h3>Transfers</h3>
-  <div class="collection">
-    <div *ngFor="let transfer of payment.transfers;">
-      <span>id:</span>
-      <span class="collection_prop">{{transfer.id}}</span>
-      <span>amount:</span>
-      <span class="collection_prop">{{transfer.amount | convert}}</span>
-      <span>to:</span>
-      <span class="collection_prop">{{transfer.to}}</span>
-    </div>
-  </div>
-  <h2>Catalog items</h2>
-  <div class="collection">
-    <div *ngFor="let offer of catalog;">
-      <span>name:</span>
-      <span class="collection_prop">{{offer.item.name}}</span>
-      <span>price:</span>
-      <span class="collection_prop">{{offer.item.price | convert}}</span>
-      <span>via:</span>
-      <span class="collection_prop">{{offer.merchant.name}}</span>
-      <a href="#" (click)="addToCart(offer.item, offer.merchant)">Add to cart</a>
-    </div>
-    <div class="collection" *ngIf="order">
-      <span>Cart ({{order.id}}):</span>
-      <span class="collection_prop">{{order.amount | convert}}</span>
-      <a href="#" (click)="checkout()" *ngIf="order.amount">Checkout</a>
-    </div>
-  </div>
-  <h2>Payments</h2>
-  <span>amount:</span>
-  <span class="collection_prop">{{total.gateway.amount | convert}}</span>
-  <span>market:</span>
-  <span class="collection_prop">{{total.gateway.market | convert}}</span>
-  <a href="#"
-     *ngIf="total.gateway.amount"
-     (click)="emitGatewaySettlementEvent()">Gateway Settlement to Nodal Acc</a>
-  <div class="collection" *ngFor="let payment of payment.all();">
-    <span>id:</span>
-    <span class="collection_prop">{{payment.id}}</span>
-    <span>amount:</span>
-    <span class="collection_prop">{{payment.amount | convert}}</span>
-    <span>feeMarket:</span>
-    <span class="collection_prop">{{payment.feeMarket | convert}}</span>
-    <span>status:</span>
-    <span class="collection_prop">{{payment.status}}</span>
-    <span *ngIf="payment.feeGateway">feeGateway:</span>
-    <span class="collection_prop" *ngIf="payment.feeGateway">{{payment.feeGateway | convert}}</span>
-    <div *ngFor="let item of payment.order.items;">
-      <span>name:</span>
-      <span class="collection_prop">{{item.item.id}}</span>
-      <span>qty:</span>
-      <span class="collection_prop">{{item.qty}}</span>
-      <span>merchant:</span>
-      <span class="collection_prop">{{item.merchant.name}}</span>
-      <span>amountMerchant:</span>
-      <span class="collection_prop">{{item.amountMerchant | convert}}</span>
-      <span>feeMarket:</span>
-      <span class="collection_prop">{{item.feeMarket | convert}}</span>
-      <a href="#"
-         *ngIf="!item.refunded"
-         (click)="refund(item)">Refund</a>
-    </div>
-  </div>
+<div style="width:900px; margin: 0 auto;">
+  <mat-toolbar>
+    <span>{{title | uppercase}}</span>
+  </mat-toolbar>
+  <app-catalog></app-catalog>
+  <app-order></app-order>
 </div>
 <router-outlet></router-outlet>
