--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+/*@import "~@angular/material/prebuilt-themes/indigo-pink.css";*/
+
+table {
+  width: 100%;
+}
+
+.mat-card {
+  margin: 15px 0;
+}
+
+button {
+  margin: 0 5px;
+}
