add order-item list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
   </mat-toolbar>
   <app-catalog></app-catalog>
   <app-order></app-order>
+  <app-order-item></app-order-item>
 </div>
 <router-outlet></router-outlet>
