--- a/src/app/ui/order-item/order-item.component.html
+++ b/src/app/ui/order-item/order-item.component.html
@@ -25,8 +25,8 @@
     <td mat-cell *matCellDef="let element">{{element.merchant.name}}</td>
     <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
-  <ng-container matColumnDef="itemId">
-    <th mat-header-cell *matHeaderCellDef>item id</th>
+  <ng-container matColumnDef="SKU">
+    <th mat-header-cell *matHeaderCellDef>SKU</th>
     <td mat-cell *matCellDef="let element">{{element.item.id}}</td>
     <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
