--- a/src/app/ui/catalog/catalog.component.html
+++ b/src/app/ui/catalog/catalog.component.html
@@ -1,41 +1,11 @@
 <h2>Catalog items</h2>
-<mat-card>
-  <strong>Customer</strong>
-  <mat-button-toggle-group
-    [value]="customer.first()"
-    [(ngModel)]="current.customer">
-    <mat-button-toggle *ngFor="let it of customer.all()" [value]="it">{{it.name}}</mat-button-toggle>
-  </mat-button-toggle-group>
-  <strong>Seller</strong>
-  <mat-button-toggle-group
-    [value]="merchant.first()"
-    [(ngModel)]="current.merchant">
-    <mat-button-toggle *ngFor="let it of merchant.all()" [value]="it">{{it.name}}</mat-button-toggle>
-  </mat-button-toggle-group>
-</mat-card>
-<table mat-table [dataSource]="item.all()" class="mat-elevation-z8">
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>id</th>
-    <td mat-cell *matCellDef="let element">{{element.id}}</td>
-  </ng-container>
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef>price</th>
-    <td mat-cell *matCellDef="let element">{{element.price | convert}}</td>
-  </ng-container>
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>action</th>
-    <td mat-cell *matCellDef="let element">
-        <button
-          mat-raised-button
-          color="primary"
-          (click)="addToCart(element)"
-        >Add to Cart</button>
-    </td>
-  </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<button
+  mat-raised-button
+  color="primary"
+  (click)="addToCart()"
+>Fill Cart</button>
+
 <mat-card>
   <span>Cart ({{cart.id}}):</span>
   <span class="collection_prop">amount: {{cart.amount | convert}} + shipping:{{cart.amountShipping | convert}} = {{cart.total | convert}}</span>
