--- a/src/app/ui/order-item/order-item.component.html
+++ b/src/app/ui/order-item/order-item.component.html
@@ -17,12 +17,12 @@
   </ng-container>
   <ng-container matColumnDef="sellerId">
     <th mat-header-cell *matHeaderCellDef>seller id</th>
-    <td mat-cell *matCellDef="let element">{{element.merchant.id}}</td>
+    <td mat-cell *matCellDef="let element">{{element.seller.id}}</td>
     <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <ng-container matColumnDef="sellerName">
     <th mat-header-cell *matHeaderCellDef>seller name</th>
-    <td mat-cell *matCellDef="let element">{{element.merchant.name}}</td>
+    <td mat-cell *matCellDef="let element">{{element.seller.name}}</td>
     <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <ng-container matColumnDef="SKU">
