add payment list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
   <app-catalog></app-catalog>
   <app-order></app-order>
   <app-order-item></app-order-item>
+  <app-payment-list [dataSource]="payment.all()"></app-payment-list>
 </div>
 <router-outlet></router-outlet>
