--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,4 @@
-<div style="width:1000px; margin: 0 auto;">
-  <mat-toolbar>
-    <span class="toolbar-canter">{{title | uppercase}}</span>
-    <!--<button mat-mini-fab (click)="save()">S</button> TODO import/export  -->
-  </mat-toolbar>
-
-  <mat-tab-group>
-    <mat-tab label="Orders">
-      <app-catalog></app-catalog>
-      <app-order></app-order>
-      <app-order-item></app-order-item>
-    </mat-tab>
-    <mat-tab label="Payments">
-      <app-payment-list [dataSource]="payment.all()"></app-payment-list>
-    </mat-tab>
-    <mat-tab label="Sellers / Invoices">
-      <h1>Some more tab content</h1>
-      <p>...</p>
-    </mat-tab>
-    <mat-tab label="Nodal">
-      <h1>Some more tab content</h1>
-      <p>...</p>
-    </mat-tab>
-    <mat-tab label="Refunds / CreditMemo">
-      <h1>Some more tab content</h1>
-      <p>...</p>
-    </mat-tab>
-    <mat-tab label="Customers">
-      <h1>Some more tab content</h1>
-      <p>...</p>
-    </mat-tab>
-  </mat-tab-group>
-
-</div>
-<router-outlet></router-outlet>
+<app-layout>
+  <app-menu [list]="menu" [heading]="title"></app-menu>
+  <router-outlet></router-outlet>
+</app-layout>
