--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 @import "../node_modules/purecss/build/pure.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap-reboot.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap-grid.css";
 
+
+/*TODO remove it*/
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
