add 1.2. Checkout order

--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -49,6 +49,7 @@
     <span>add</span>
   </button>
 </form>
+<button class="button-xsmall pure-button" (click)="checkout()">checkout</button>
 <app-order-item-table [provider]="model.itemsCart"></app-order-item-table>
 <h2>Orders</h2>
 <table class="pure-table pure-table-horizontal">
