--- a/src/app/ui/table/ordet-item-table/order-item-table.component.html
+++ b/src/app/ui/table/ordet-item-table/order-item-table.component.html
@@ -9,12 +9,12 @@
             <td *ngFor="let field of provider.fields">{{item[field]}}</td>
         </tr>
     </tbody>
-  <tfoot>
+<!--  <tfoot>
        <tr>
             <td></td>
             <td></td>
             <td></td>
-            <td><button class="button-xsmall pure-button">checkout</button></td>
+            <td></td>
         </tr>
-  </tfoot>
+  </tfoot>-->
 </table>
