[BOODMO-16925] fix orders page

--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -5,7 +5,7 @@
 -->
 <div class="content">
   <div class="container-fluid">
-q    <div class="row justify-content-md-center mb-3">
+    <div class="row justify-content-md-center mb-3">
       <div class="col-md-8">
 
         <div class="card">
@@ -138,7 +138,7 @@ q    <div class="row justify-content-md-center mb-3">
   <table class="table table-bordered table-striped table-hover">
     <thead class="thead-light">
     <tr>
-      <th scope="col">Order #</th>
+      <th scope="col">#</th>
       <th scope="col">Customer</th>
       <th scope="col" colspan="2">SKU</th>
       <th scope="col">Action</th>
